
What's new in version 0.6.1

* Included icon .desktop and desktop entry
  (thanks to Peter Hyman)
* Added a check to make sure that a root-user htop closes
  when its parent non-root terminal is closed.
  (thanks to Ilya Evseev for the report)
* BUGFIX: does not crash anymore when $HOME is not set
  (thanks to Henning Schild for the report)

What's new in version 0.6

* Configuration of columns merged into the Setup screen
* Integrated strace (press 's')
  (thanks to Marinho Barcellos for the help)
* BUGFIX: some fixes, aided by Valgrind
  (thanks to Wolfram Schlich for the report)
* BUGFIX: fixed bug when switching meter modes
  (thanks to Eduardo Righes for the report)
* Show processes of a single user
* "SortBy" function now menu-based
* Improved mouse handling
* ...and on top of that reduced memory consumption!

What's new in version 0.5.4

* Color schemes
* -d flag, to configure delay between updates.
  Note that the delay value is saved in ~/.htoprc.
* BUGFIX: Update of meters was halting after help screen.
  (thanks to Matt Moore)
* BUGFIX: No longer display incorrect information
  in first frame.
* BUGFIX: Fix auto-detection of /proc/stat,
  correcting CPU usage information on multiprocessor
  systems.

What's new in version 0.5.3

* Read new field "steal" on newer /proc/stat files
* Auto-detects format of /proc/stat, to cope
  with patched 2.4 kernels which display 2.6-style
  information (most notably those on RHEL 3)
  (thanks to Fernando Dotta for the report)
* Support $HOME_ETC initiative
  (see http://www.pld-linux.org/Docs/home-etc)
  (thanks to Roman Barczynski for the tip)
* The configure script now tests for /proc, so
  that it fails early on unsupported platforms
  instead of during compilation/execution.
* Made presentation of the function keys in the
  status bar consistent across views
  (thanks to David Mathog for the report)
* Minor changes to make the codebase more friendly
  to possible future ports